sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:14: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.AlgSelectionSort'
override def run() {
             ^